# arm2d-cmake-example

./: .gitmodules  CMakeLists.txt  RTE_Components.h  arm2d_hello.c
lib/core/: CMakeLists.ignore
